--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,22 @@
 main {
   height: calc(100vh - 5.5rem);
+  display: flex;
+}
+
+.details-series {
+  height: 500px;
+}
+
+.details-series__image {
+  width: 300px;
+  height: 300px;
+}
+
+.details-series__image img {
+  width: 100%;
+}
+
+.form-series form {
+  display: flex;
+  flex-direction: column;
 }
