--- a/styles/main.css
+++ b/styles/main.css
@@ -1,22 +1,12 @@
 main {
   height: calc(100vh - 5.5rem);
+  max-width: var(--max-width);
+  margin: auto;
+  padding: 2.5rem 0;
   display: flex;
+  justify-content: space-between;
 }
 
-.details-series {
-  height: 500px;
-}
-
-.details-series__image {
-  width: 300px;
-  height: 300px;
-}
-
-.details-series__image img {
-  width: 100%;
-}
-
-.form-series form {
-  display: flex;
-  flex-direction: column;
+main div {
+  width: 70%;
 }
